<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".OperDecimais" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/digite_valor_decimais"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <EditText
                android:id="@+id/numero_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number|numberDecimal"
                android:padding="16dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_operacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/mais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/mais"
                    android:textColor="@android:color/black"
                    android:textSize="26sp" />

                <RadioButton
                    android:id="@+id/menos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/menos"
                    android:textColor="@android:color/black"
                    android:textSize="26sp" />

                <RadioButton
                    android:id="@+id/vezes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/mult"
                    android:textColor="@android:color/black"
                    android:textSize="26sp" />

                <RadioButton
                    android:id="@+id/divisao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/divi"
                    android:textColor="@android:color/black"
                    android:textSize="26sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/numero_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number|numberDecimal"
                android:padding="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igual"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/holo_green_light"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@android:color/holo_green_light"
            android:onClick="botaoDecimais"
            android:padding="16dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/botao"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@android:color/holo_green_light"
            android:onClick="limparOperDecimais"
            android:padding="16dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/limpar"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>