<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/mensagem_inicio"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:padding="16dp"></View>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:onClick="regraDeTres"
            android:shadowColor="@android:color/transparent"
            android:text="@string/regra_tres"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:onClick="retiraPorncentagem"
            android:shadowColor="@android:color/transparent"
            android:text="@string/retirar_porcentagem"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:onClick="somaPorncentagem"
            android:shadowColor="@android:color/transparent"
            android:text="@string/somar_porcentagem"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:onClick="operacaoDecimais"
            android:shadowColor="@android:color/transparent"
            android:text="@string/operar_decimais"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:onClick="divisaoFracao"
            android:shadowColor="@android:color/transparent"
            android:text="@string/divisao_fracao"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>