<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.gleibson.calcfacil.DivisaoFracao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/digite_valor_fracao"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <EditText
                android:id="@+id/numerador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number"
                android:padding="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numerador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number"
                android:padding="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <View
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:background="@android:color/black"></View>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/divi"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

            <View
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:background="@android:color/black"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/igual"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <EditText
                android:id="@+id/denominador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number"
                android:padding="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/denominador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="number"
                android:padding="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:textAlignment="center" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@android:color/holo_green_light"
            android:onClick="botaoDivisaoFracao"
            android:padding="16dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/botao"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@android:color/holo_green_light"
            android:onClick="limparDivisaoFracao"
            android:padding="16dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/limpar"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>